# Barkout

./: Barkanoid.cbp  Barkanoid.depend  Barkanoid.layout  Makefile  Makefile.am  Makefile.in  Makefile.mine  README  README.md  animation.c  animation.h  animationfactory.c  animationfactory.h  app.h  arena.c  arena.h  ball.c  ball.h  barkanoid.c  bat.c  bat.h  bitbucket-pipelines.yml  bonus.h  bounds.c  bounds.h  brick.h  cat.c  cat.h  config.c  config.h  configure  configure.ac  intro.c  intro.h  level1.lvl  level2.lvl  menu.c  menu.h  resourcefactory.c  resourcefactory.h  (+3 more)
.github/workflows/: makefile.yml
Levels/: level1.lvl  level10.lvl  level11.lvl  level12.lvl  level13.lvl  level14.lvl  level15.lvl  level16.lvl  level17.lvl  level18.lvl  level19.lvl  level2.lvl  level20.lvl  level21.lvl  level22.lvl  level23.lvl  level24.lvl  level25.lvl  level26.lvl  level27.lvl  level28.lvl  level29.lvl  level3.lvl  level30.lvl  level31.lvl  level32.lvl  level33.lvl  level34.lvl  level35.lvl  level36.lvl  level37.lvl  level38.lvl  level39.lvl  level4.lvl  level40.lvl  level5.lvl  level6.lvl  level7.lvl  level8.lvl  level9.lvl
src/: app.h  arena.c  arena.h  ball.c  ball.h  barkanoid.c  bat.c  bat.h  bonus.c  bonus.h  bounds.c  bounds.h  brick.h  cat.c  cat.h  config.c  config.h  intro.c  intro.h  levels.c  levels.h  menu.c  menu.h  resourcefactory.c  resourcefactory.h  resources.c  resources.h  scores.c  scores.h  text.c  text.h  vector.c  vector.h
