# Automakes makefile template
# This uses the same structure as a regular Makefile

#SUBDIRS = src
AUTOMAKE_OPTIONS = subdir-objects
bin_PROGRAMS = barkout
barkout_SOURCES = src/barkanoid.c src/arena.c src/ball.c src/bat.c src/bonus.c src/bounds.c src/cat.c src/config.c src/intro.c src/menu.c src/resourcefactory.c src/scores.c src/text.c

